Avoid line wrapping in navigation menu

--- a/debexpo/public/style.css
+++ b/debexpo/public/style.css
@@ -100,6 +100,7 @@ td.navigation-td {
     background: right repeat-y url(/shadow-right.png);
     background-color: #f8c078;
     padding-right: 7px;
+    white-space: nowrap;
 }
 
 /* Colored subsections of the left menu */
